--- a/My2048/style.css
+++ b/My2048/style.css
@@ -1,9 +1,13 @@
 .main-container{
-    position: relative;
+    position: absolute;
     background-color: #BBADA0;
     border-radius: 10px;
     width: 550px;
     height: 550px;
+    top: 50%;
+    left: 50%;
+    margin-top: -275px;
+    margin-left: -275px;
 }
 .cell-container{
     color: #776E65;
